--- a/PointsSetControl.xaml
+++ b/PointsSetControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl
+﻿<UserControl x:Name="PointsSet"
     x:Class="CatsControls.PointsSetControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,8 +9,11 @@
     d:DesignHeight="450"
     d:DesignWidth="800">
 
-    <Grid x:Name="Grid" Background="Black">
-        <canvas:CanvasControl x:Name="Canvas"  SizeChanged="Canvas_SizeChanged" DoubleTapped="Canvas_DoubleTapped" Draw="Canvas_Draw" ManipulationMode="All" ManipulationDelta="Canvas_ManipulationDelta" PointerWheelChanged="Canvas_PointerWheelChanged" ClearColor="#00000000" CanBeScrollAnchor="True" CreateResources="Canvas_CreateResources"/>
+    <Grid x:Name="Grid">
+        <Grid.Background>
+            <Binding x:Name="PointsSet_Background" ElementName="PointsSet" Path="Background"/>
+        </Grid.Background>
+        <canvas:CanvasControl x:Name="Canvas" SizeChanged="Canvas_SizeChanged" DoubleTapped="Canvas_DoubleTapped" Draw="Canvas_Draw" ManipulationMode="All" ManipulationDelta="Canvas_ManipulationDelta" PointerWheelChanged="Canvas_PointerWheelChanged" ClearColor="#00000000" CanBeScrollAnchor="True" CreateResources="Canvas_CreateResources"/>
     </Grid>
     
 </UserControl>
