--- a/PointsSetControl.xaml
+++ b/PointsSetControl.xaml
@@ -10,7 +10,7 @@
     d:DesignWidth="800">
     
     <Grid x:Name="Grid" ManipulationMode="All" Background="{Binding ElementName=PointsSet, Path=Background}">
-        <canvas:CanvasControl x:Name="Canvas" SizeChanged="Canvas_SizeChanged" DoubleTapped="Canvas_DoubleTapped" Draw="Canvas_Draw" ManipulationMode="All" ManipulationDelta="Canvas_ManipulationDelta" PointerWheelChanged="Canvas_PointerWheelChanged" ClearColor="#00000000" CanBeScrollAnchor="True" CreateResources="Canvas_CreateResources"/>
+        <canvas:CanvasControl x:Name="Canvas" DoubleTapped="Canvas_DoubleTapped" ManipulationMode="All" ManipulationDelta="Canvas_ManipulationDelta" PointerWheelChanged="Canvas_PointerWheelChanged" ClearColor="#00000000" CanBeScrollAnchor="True" CreateResources="Canvas_CreateResources" SizeChanged="Canvas_SizeChanged"/>
     </Grid>
     
 </UserControl>
