--- a/PointsSet/PointsSetControl.xaml
+++ b/PointsSet/PointsSetControl.xaml
@@ -1,16 +1,29 @@
-﻿<UserControl x:Name="PointsSet"
-    x:Class="CatsControls.PointsSetControl"
+﻿<UserControl
+    x:Class="CatsControls.PointsSet.PointsSetControl"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
-    mc:Ignorable="d"
+    x:Name="PointsSet"
     d:DesignHeight="450"
-    d:DesignWidth="800">
-    
-    <Grid x:Name="Grid" ManipulationMode="All" Background="{Binding ElementName=PointsSet, Path=Background}">
-        <canvas:CanvasControl x:Name="Canvas" DoubleTapped="Canvas_DoubleTapped" ManipulationMode="All" ManipulationDelta="Canvas_ManipulationDelta" PointerWheelChanged="Canvas_PointerWheelChanged" ClearColor="#00000000" CanBeScrollAnchor="True" CreateResources="Canvas_CreateResources" SizeChanged="Canvas_SizeChanged"/>
+    d:DesignWidth="800"
+    mc:Ignorable="d">
+
+    <Grid
+        x:Name="Grid"
+        Background="{x:Bind PointsSet.Background, Mode=OneWay}"
+        ManipulationMode="All">
+        <canvas:CanvasControl
+            x:Name="Canvas"
+            CanBeScrollAnchor="True"
+            ClearColor="#00000000"
+            CreateResources="Canvas_CreateResources"
+            DoubleTapped="Canvas_DoubleTapped"
+            ManipulationDelta="Canvas_ManipulationDelta"
+            ManipulationMode="All"
+            PointerWheelChanged="Canvas_PointerWheelChanged"
+            SizeChanged="Canvas_SizeChanged" />
     </Grid>
-    
+
 </UserControl>
